force-app/main/default/objects/Headless_Architecture__c.object
<CustomObject>
    <label>Headless Architecture</label>
    <pluralLabel>Headless Architectures</pluralLabel>
    <nameField>
        <label>Headless Architecture Name</label>
        <type>Text</type>
    </nameField>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>1024</length>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Layer__c</fullName>
        <label>Layer</label>
        <picklist>
            <picklistValues>
                <fullName>Data 360</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Logic 360</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orchestration 360</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engagement 360</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <searchSettings>
        <searchResultAdditionalFields>NAME</searchResultAdditionalFields>
        <searchResultsByObject>
            <searchResultFields>NAME</searchResultFields>
        </searchResultsByObject>
    </searchSettings>
</CustomObject>